--- a/Restaurant2/src/main/resources/org/example/View/Admin.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Admin.fxml
@@ -3,10 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,34 +18,98 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.AdminController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.AdminController">
     <children>
         <TabPane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
+
                 <Tab text="Angajati">
                     <content>
                         <VBox spacing="15.0">
                             <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
-                            <HBox spacing="10.0">
+                            <HBox spacing="10.0" alignment="CENTER_LEFT">
                                 <children>
-                                    <TextField fx:id="usernameField" promptText="Username" />
-                                    <PasswordField fx:id="passwordField" promptText="Password" />
-                                    <Button onAction="#handleAddStaff" text="Hire" />
+                                    <Label text="Angajat nou:" style="-fx-font-weight: bold;"/>
+                                    <TextField fx:id="usernameField" promptText="Nume utilizator" />
+                                    <PasswordField fx:id="passwordField" promptText="Parola" />
+                                    <Button onAction="#handleAddStaff" text="Angajeaza" style="-fx-base: #4CAF50;" />
                                 </children>
                             </HBox>
-                            <TableView fx:id="staffTable" VBox.vgrow="ALWAYS" />
-                            <Button onAction="#handleDeleteStaff" text="Fire" textFill="RED" />
+
+                            <Separator />
+
+                            <TableView fx:id="staffTable" VBox.vgrow="ALWAYS">
+                                <columns>
+                                    <TableColumn fx:id="staffName" text="Utilizator" prefWidth="150.0"/>
+                                    <TableColumn fx:id="staffRole" text="Rol" prefWidth="100.0"/>
+                                </columns>
+                                <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                </columnResizePolicy>
+                            </TableView>
+
+                            <Button onAction="#handleDeleteStaff" text="Concediaza" textFill="RED" />
                         </VBox>
                     </content>
                 </Tab>
 
-                <Tab text="Gestiune Meniu">
+                <Tab text="Gestiune meniu">
                     <content>
-                        <Label text="Aici poți muta tabelul de produse din iterațiile trecute."/>
+                        <SplitPane dividerPositions="0.65">
+                            <items>
+                                <VBox>
+                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
+                                    <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
+                                        <columns>
+                                            <TableColumn fx:id="prodName" text="Produs" />
+                                            <TableColumn fx:id="prodPrice" text="Pret (RON)" />
+                                            <TableColumn fx:id="prodCategory" text="Categorie" />
+                                        </columns>
+                                        <columnResizePolicy>
+                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                        </columnResizePolicy>
+                                    </TableView>
+                                </VBox>
+
+                                <VBox spacing="15.0" style="-fx-background-color: #f4f4f4;">
+                                    <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
+
+                                    <Label text="Detalii produs">
+                                        <font><Font name="System Bold" size="16.0" /></font>
+                                    </Label>
+                                    <Separator />
+
+                                    <VBox spacing="5.0">
+                                        <Label text="Nume:" />
+                                        <TextField fx:id="prodNameField" promptText="ex: Pizza Casei" />
+                                    </VBox>
+
+                                    <VBox spacing="5.0">
+                                        <Label text="Pret:" />
+                                        <TextField fx:id="prodPriceField" promptText="ex: 45.5" />
+                                    </VBox>
+
+                                    <VBox spacing="5.0">
+                                        <Label text="Categorie:" />
+                                        <ComboBox fx:id="prodCategoryField" prefWidth="200.0" promptText="Selecteaza..." />
+                                    </VBox>
+
+                                    <CheckBox fx:id="prodVegetarianField" text="Este Vegetarian?" />
+
+                                    <Separator />
+
+                                    <VBox spacing="10.0">
+                                        <Button onAction="#handleAddProduct" text="Salveaza / Adauga" maxWidth="Infinity" style="-fx-base: #2196F3; -fx-text-fill: white;"/>
+                                        <Button onAction="#handleDeleteProduct" text="Sterge produs selectat" maxWidth="Infinity" style="-fx-base: #FF5252; -fx-text-fill: white;"/>
+                                        <Button onAction="#handleClearForm" text="Curata formularul" maxWidth="Infinity" />
+                                    </VBox>
+                                </VBox>
+                            </items>
+                        </SplitPane>
                     </content>
                 </Tab>
 
-                <Tab text="Offer Manager">
+                <Tab text="Offer manager">
                     <content>
                         <VBox spacing="20.0">
                             <padding><Insets bottom="40.0" left="40.0" right="40.0" top="40.0" /></padding>
@@ -55,11 +123,30 @@
                     </content>
                 </Tab>
 
-                <Tab text = "Istoric comenzi">
+                <Tab text="Istoric comenzi">
                     <content>
-                        <TableView fx:id="ordersHistoryTable" />
+                        <VBox>
+                            <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
+                            <Label text="Toate comenzile inregistrate:">
+                                <font><Font name="System Bold" size="14.0"/></font>
+                                <padding><Insets bottom="10.0"/></padding>
+                            </Label>
+
+                            <TableView fx:id="ordersHistoryTable" VBox.vgrow="ALWAYS">
+                                <columns>
+                                    <TableColumn fx:id="orderId" text="ID" prefWidth="50.0" />
+                                    <TableColumn fx:id="orderDate" text="Data si ora" prefWidth="150.0" />
+                                    <TableColumn fx:id="orderUser" text="Ospatar" prefWidth="100.0" />
+                                    <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0" />
+                                </columns>
+                                <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                </columnResizePolicy>
+                            </TableView>
+                        </VBox>
                     </content>
                 </Tab>
+
             </tabs>
         </TabPane>
     </children>
