--- a/Restaurant2/src/main/resources/org/example/View/Staff.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Staff.fxml
@@ -5,53 +5,113 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.StaffController">
-    <center>
-        <SplitPane dividerPositions="0.6" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <items>
-                <VBox spacing="10.0">
-                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-                    <Label text="1. Select table">
-                        <font><Font name="System Bold" size="14.0" /></font>
-                    </Label>
-                    <ListView fx:id="tablesList" orientation="HORIZONTAL" prefHeight="80.0" />
-                    <Label text="2. Add products to order">
-                        <font><Font name="System Bold" size="14.0" /></font>
-                    </Label>
-                    <TableView fx:id="menuTable" VBox.vgrow="ALWAYS" />
-                    <Button maxWidth="Infinity" onAction="#handleAddToOrder" text="Add to order" style="-fx-background-color: #4CAF50; -fx-text-fill: white;"/>
-                </VBox>
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.StaffController">
+    <children>
+        <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <tabs>
+                <Tab text="Comanda noua">
+                    <content>
+                        <SplitPane dividerPositions="0.6">
+                            <items>
+                                <VBox spacing="10.0">
+                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
 
-                <VBox spacing="10.0">
-                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-                    <Label text="Current order:">
-                        <font><Font name="System Bold" size="16.0" /></font>
-                    </Label>
-                    <TableView fx:id="orderTable" VBox.vgrow="ALWAYS" />
-                    <Button onAction="#handleRemoveItem" text="Șterge Linie" textFill="RED" />
+                                    <Label text="1. Select table">
+                                        <font><Font name="System Bold" size="14.0" /></font>
+                                    </Label>
+                                    <ListView fx:id="tablesList" orientation="HORIZONTAL" prefHeight="60.0" />
 
-                    <VBox style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;">
-                        <Label text="Active offers:"/>
-                        <Label fx:id="offersLabel" text="-" textFill="#2ecc71" wrapText="true"/>
-                        <HBox alignment="CENTER_RIGHT" spacing="10.0">
-                            <Label text="Total price:">
-                                <font><Font size="18.0" /></font>
+                                    <Label text="2. Add products to order:">
+                                        <font><Font name="System Bold" size="14.0" /></font>
+                                    </Label>
+
+                                    <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
+                                        <columns>
+                                            <TableColumn fx:id="productName" text="Produs" prefWidth="250.0"/>
+                                            <TableColumn fx:id="productPrice" text="Pret" prefWidth="100.0"/>
+                                            <TableColumn fx:id="productCategory" text="Categorie" prefWidth="150.0"/>
+                                        </columns>
+                                        <columnResizePolicy>
+                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                        </columnResizePolicy>
+                                    </TableView>
+
+                                    <Button maxWidth="Infinity" onAction="#handleAddToOrder" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Adauga in comanda (+)" />
+                                </VBox>
+
+                                <VBox spacing="10.0">
+                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
+                                    <Label text="Comanda curenta:">
+                                        <font><Font name="System Bold" size="16.0" /></font>
+                                    </Label>
+
+                                    <TableView fx:id="orderTable" VBox.vgrow="ALWAYS">
+                                        <columns>
+                                            <TableColumn fx:id="orderItemName" text="Produs" />
+                                            <TableColumn fx:id="orderItemPrice" text="Pret"/>
+                                            <TableColumn fx:id="orderItemQuantity" text="Cantitate" prefWidth="50.0"/>
+                                        </columns>
+                                        <columnResizePolicy>
+                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                        </columnResizePolicy>
+                                    </TableView>
+
+                                    <Button onAction="#handleRemoveItem" text="Sterge Produs" textFill="RED" />
+
+                                    <VBox style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;">
+                                        <Label text="Oferte active:" style="-fx-font-weight: bold;"/>
+                                        <Label fx:id="offersLabel" text="-" textFill="#2ecc71" wrapText="true" />
+                                        <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                                            <Label text="Total:">
+                                                <font><Font size="18.0" /></font>
+                                            </Label>
+                                            <Label fx:id="totalLabel" text="0.00 RON" textFill="#d35400">
+                                                <font><Font name="System Bold" size="24.0" /></font>
+                                            </Label>
+                                        </HBox>
+                                    </VBox>
+
+                                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0" style="-fx-base: #2196F3;" text="Finalizeaza Comanda" />
+                                </VBox>
+                            </items>
+                        </SplitPane>
+                    </content>
+                </Tab>
+
+                <Tab text="Istoricul Meu">
+                    <content>
+                        <VBox spacing="15.0">
+                            <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
+                            <Label text="Comenzile mele anterioare:">
+                                <font><Font name="System Bold" size="16.0"/></font>
                             </Label>
-                            <Label fx:id="totalLabel" text="0.00 RON" textFill="#d35400">
-                                <font><Font name="System Bold" size="24.0" /></font>
-                            </Label>
-                        </HBox>
-                    </VBox>
 
-                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0" text="Finish" />
-                </VBox>
-            </items>
-        </SplitPane>
-    </center>
-</BorderPane>
+                            <TableView fx:id="ordersHistoryTable" VBox.vgrow="ALWAYS">
+                                <columns>
+                                    <TableColumn fx:id="orderId" text="ID Comanda"/>
+                                    <TableColumn fx:id="orderDate" text="Data" prefWidth="150.0"/>
+                                    <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0"/>
+                                    <TableColumn fx:id="orderDetails" text="Detalii (Produse)" />
+                                </columns>
+                                <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                </columnResizePolicy>
+                            </TableView>
+
+                            <Button onAction="#handleRefreshHistory" text="Reimprospateaza Lista" />
+                        </VBox>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </children>
+</AnchorPane>
