--- a/Restaurant2/src/main/resources/org/example/View/Admin.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Admin.fxml
@@ -18,21 +18,35 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.AdminController">
     <children>
-        <TabPane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <MenuBar>
+            <menus>
+                <Menu text="File">
+                    <items>
+                        <MenuItem text="Export JSON" onAction="#handleExportJson"/>
+                        <MenuItem text="Import JSON" onAction="#handleImportJson"/>
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <TabPane VBox.vgrow="ALWAYS" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
 
-                <Tab text="Angajati">
+                <Tab text="Staff management">
                     <content>
                         <VBox spacing="15.0">
                             <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
                             <HBox spacing="10.0" alignment="CENTER_LEFT">
                                 <children>
-                                    <Label text="Angajat nou:" style="-fx-font-weight: bold;"/>
-                                    <TextField fx:id="usernameField" promptText="Nume utilizator" />
-                                    <PasswordField fx:id="passwordField" promptText="Parola" />
-                                    <Button onAction="#handleAddStaff" text="Angajeaza" style="-fx-base: #4CAF50;" />
+                                    <Label text="New staff:" style="-fx-font-weight: bold;"/>
+                                    <TextField fx:id="usernameField" promptText="Username" />
+                                    <PasswordField fx:id="passwordField" promptText="Password" />
+                                    <Button onAction="#handleAddStaff" text="Hire" style="-fx-base: #4CAF50;" />
                                 </children>
                             </HBox>
 
@@ -40,20 +54,20 @@
 
                             <TableView fx:id="staffTable" VBox.vgrow="ALWAYS">
                                 <columns>
-                                    <TableColumn fx:id="staffName" text="Utilizator" prefWidth="150.0"/>
-                                    <TableColumn fx:id="staffRole" text="Rol" prefWidth="100.0"/>
+                                    <TableColumn fx:id="staffName" text="User" prefWidth="150.0"/>
+                                    <TableColumn fx:id="staffRole" text="Role" prefWidth="100.0"/>
                                 </columns>
                                 <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                 </columnResizePolicy>
                             </TableView>
 
-                            <Button onAction="#handleDeleteStaff" text="Concediaza" textFill="RED" />
+                            <Button onAction="#handleDeleteStaff" text="Fire (delete) staff" textFill="RED" />
                         </VBox>
                     </content>
                 </Tab>
 
-                <Tab text="Gestiune meniu">
+                <Tab text="Menu dashboard">
                     <content>
                         <SplitPane dividerPositions="0.65">
                             <items>
@@ -61,9 +75,9 @@
                                     <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
                                     <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
                                         <columns>
-                                            <TableColumn fx:id="prodName" text="Produs" />
-                                            <TableColumn fx:id="prodPrice" text="Pret (RON)" />
-                                            <TableColumn fx:id="prodCategory" text="Categorie" />
+                                            <TableColumn fx:id="prodName" text="Product" />
+                                            <TableColumn fx:id="prodPrice" text="Price (RON)" />
+                                            <TableColumn fx:id="prodCategory" text="Category" />
                                         </columns>
                                         <columnResizePolicy>
                                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -74,34 +88,34 @@
                                 <VBox spacing="15.0" style="-fx-background-color: #f4f4f4;">
                                     <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
 
-                                    <Label text="Detalii produs">
+                                    <Label text="Product details">
                                         <font><Font name="System Bold" size="16.0" /></font>
                                     </Label>
                                     <Separator />
 
                                     <VBox spacing="5.0">
-                                        <Label text="Nume:" />
-                                        <TextField fx:id="prodNameField" promptText="ex: Pizza Casei" />
+                                        <Label text="Name:" />
+                                        <TextField fx:id="prodNameField" promptText="Name..." />
                                     </VBox>
 
                                     <VBox spacing="5.0">
-                                        <Label text="Pret:" />
-                                        <TextField fx:id="prodPriceField" promptText="ex: 45.5" />
+                                        <Label text="Price:" />
+                                        <TextField fx:id="prodPriceField" promptText="Price..." />
                                     </VBox>
 
                                     <VBox spacing="5.0">
-                                        <Label text="Categorie:" />
-                                        <ComboBox fx:id="prodCategoryField" prefWidth="200.0" promptText="Selecteaza..." />
+                                        <Label text="Category:" />
+                                        <ComboBox fx:id="prodCategoryField" prefWidth="200.0" promptText="Select..." />
                                     </VBox>
 
-                                    <CheckBox fx:id="prodVegetarianField" text="Este Vegetarian?" />
+                                    <CheckBox fx:id="prodVegetarianField" text="Vegetarian?" />
 
                                     <Separator />
 
                                     <VBox spacing="10.0">
-                                        <Button onAction="#handleAddProduct" text="Salveaza / Adauga" maxWidth="Infinity" style="-fx-base: #2196F3; -fx-text-fill: white;"/>
-                                        <Button onAction="#handleDeleteProduct" text="Sterge produs selectat" maxWidth="Infinity" style="-fx-base: #FF5252; -fx-text-fill: white;"/>
-                                        <Button onAction="#handleClearForm" text="Curata formularul" maxWidth="Infinity" />
+                                        <Button onAction="#handleAddProduct" text="Save / Add" maxWidth="Infinity" style="-fx-base: #2196F3; -fx-text-fill: white;"/>
+                                        <Button onAction="#handleDeleteProduct" text="Delete selected item" maxWidth="Infinity" style="-fx-base: #FF5252; -fx-text-fill: white;"/>
+                                        <Button onAction="#handleClearForm" text="Clear form" maxWidth="Infinity" />
                                     </VBox>
                                 </VBox>
                             </items>
@@ -116,18 +130,18 @@
                             <Label text="Select active offers:">
                                 <font><Font size="18.0" /></font>
                             </Label>
-                            <CheckBox fx:id="happyHourCheck" text="Happy Hour (20% off alcoholic drinks)" />
-                            <CheckBox fx:id="valentinesDayCheck" text="Valentines Day (10% off everything)" />
-                            <CheckBox fx:id="freeBeerCheck" text="Free Beer (each Pizza gives extra beer)" />
+                            <CheckBox fx:id="mealDealCheck" text="Meal Deal (Who buys Pizza, gets the cheapest dessert 25% off)" />
+                            <CheckBox fx:id="partyPackCheck" text="Party Pack (When ordering 4 pizzas, the cheapest one is free)" />
+                            <CheckBox fx:id="happyHourCheck" text="Happy Hour (Every other drink is 50% off)" />
                         </VBox>
                     </content>
                 </Tab>
 
-                <Tab text="Istoric comenzi">
+                <Tab text="Orders history">
                     <content>
                         <VBox>
                             <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-                            <Label text="Toate comenzile inregistrate:">
+                            <Label text="All orders:">
                                 <font><Font name="System Bold" size="14.0"/></font>
                                 <padding><Insets bottom="10.0"/></padding>
                             </Label>
@@ -136,7 +150,7 @@
                                 <columns>
                                     <TableColumn fx:id="orderId" text="ID" prefWidth="50.0" />
                                     <TableColumn fx:id="orderDate" text="Data si ora" prefWidth="150.0" />
-                                    <TableColumn fx:id="orderUser" text="Ospatar" prefWidth="100.0" />
+                                    <TableColumn fx:id="orderUser" text="Staff" prefWidth="100.0" />
                                     <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0" />
                                 </columns>
                                 <columnResizePolicy>
@@ -149,5 +163,6 @@
 
             </tabs>
         </TabPane>
+        </VBox>
     </children>
 </AnchorPane>
