--- a/Restaurant2/src/main/resources/org/example/View/Guest.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Guest.fxml
@@ -22,28 +22,28 @@
             <children>
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
-                        <Label text="Bine ati venit la restaurantul 'La Andrei'!">
+                        <Label text="Welcome to restaurant 'La Andrei'!">
                             <font><Font name="System Bold" size="18.0" /></font>
                         </Label>
                         <Region HBox.hgrow="ALWAYS" />
                         <Button fx:id="loginButton" onAction="#handleLoginRedirect" text="Login" />
                     </children>
                 </HBox>
-                <TextField fx:id="searchField" onAction="#handleSearch" promptText="Cauta articol..." />
+                <TextField fx:id="searchField" onAction="#handleSearch" promptText="Search..." />
             </children>
         </VBox>
     </top>
     <left>
         <VBox spacing="15.0" BorderPane.alignment="CENTER">
             <padding><Insets right="10.0" left="10.0"/></padding>
-            <Label text="Filtre"><font><Font name="System Bold" size="14.0"/></font></Label>
+            <Label text="Filters"><font><Font name="System Bold" size="14.0"/></font></Label>
 
             <CheckBox fx:id="vegetarianFilter" text="Vegetarian" />
 
-            <Label text="Categorie:" />
+            <Label text="Category:" />
             <ComboBox fx:id="categoryFilter" prefWidth="150.0" />
 
-            <Label text="Pret maxim:" />
+            <Label text="Maximum price:" />
             <Slider fx:id="priceSlider" majorTickUnit="50.0" max="200.0" showTickLabels="true" showTickMarks="true" />
         </VBox>
     </left>
@@ -55,11 +55,11 @@
     <right>
         <VBox prefWidth="200.0" spacing="10.0" style="-fx-background-color: #f4f4f4;" BorderPane.alignment="CENTER">
             <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-            <Label text="Detalii articol:">
+            <Label text="Item details:">
                 <font><Font name="System Bold" size="14.0" /></font>
             </Label>
             <Separator prefWidth="200.0" />
-            <Label fx:id="detailsLabel" text="Selecteaza un articol din tabel..." wrapText="true" />
+            <Label fx:id="detailsLabel" text="Select any article from table..." wrapText="true" />
         </VBox>
     </right>
 </BorderPane>
