--- a/Restaurant2/src/main/resources/org/example/View/Staff.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Staff.fxml
@@ -14,11 +14,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.StaffController">
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ProgressIndicator?>
+<StackPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.StaffController">
     <children>
         <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
-                <Tab text="Comanda noua">
+                <Tab text="New order">
                     <content>
                         <SplitPane dividerPositions="0.6">
                             <items>
@@ -36,39 +38,39 @@
 
                                     <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
                                         <columns>
-                                            <TableColumn fx:id="productName" text="Produs" prefWidth="250.0"/>
-                                            <TableColumn fx:id="productPrice" text="Pret" prefWidth="100.0"/>
-                                            <TableColumn fx:id="productCategory" text="Categorie" prefWidth="150.0"/>
+                                            <TableColumn fx:id="productName" text="Product" prefWidth="250.0"/>
+                                            <TableColumn fx:id="productPrice" text="Price" prefWidth="100.0"/>
+                                            <TableColumn fx:id="productCategory" text="Category" prefWidth="150.0"/>
                                         </columns>
                                         <columnResizePolicy>
                                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                         </columnResizePolicy>
                                     </TableView>
 
-                                    <Button maxWidth="Infinity" onAction="#handleAddToOrder" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Adauga in comanda (+)" />
+                                    <Button maxWidth="Infinity" onAction="#handleAddToOrder" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Add to order (+)" />
                                 </VBox>
 
                                 <VBox spacing="10.0">
                                     <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-                                    <Label text="Comanda curenta:">
+                                    <Label text="Current order:">
                                         <font><Font name="System Bold" size="16.0" /></font>
                                     </Label>
 
                                     <TableView fx:id="orderTable" VBox.vgrow="ALWAYS">
                                         <columns>
-                                            <TableColumn fx:id="orderItemName" text="Produs" />
-                                            <TableColumn fx:id="orderItemPrice" text="Pret"/>
-                                            <TableColumn fx:id="orderItemQuantity" text="Cantitate" prefWidth="50.0"/>
+                                            <TableColumn fx:id="orderItemName" text="Product" />
+                                            <TableColumn fx:id="orderItemPrice" text="Price"/>
+                                            <TableColumn fx:id="orderItemQuantity" text="Quantity" prefWidth="50.0"/>
                                         </columns>
                                         <columnResizePolicy>
                                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                         </columnResizePolicy>
                                     </TableView>
 
-                                    <Button onAction="#handleRemoveItem" text="Sterge Produs" textFill="RED" />
+                                    <Button onAction="#handleRemoveItem" text="Delete product" textFill="RED" />
 
                                     <VBox style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;">
-                                        <Label text="Oferte active:" style="-fx-font-weight: bold;"/>
+                                        <Label text="Active offers: " style="-fx-font-weight: bold;"/>
                                         <Label fx:id="offersLabel" text="-" textFill="#2ecc71" wrapText="true" />
                                         <HBox alignment="CENTER_RIGHT" spacing="10.0">
                                             <Label text="Total:">
@@ -80,38 +82,39 @@
                                         </HBox>
                                     </VBox>
 
-                                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0" style="-fx-base: #2196F3;" text="Finalizeaza Comanda" />
+                                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0" style="-fx-base: #2196F3;" text="Finish" />
                                 </VBox>
                             </items>
                         </SplitPane>
                     </content>
                 </Tab>
 
-                <Tab text="Istoricul Meu">
+                <Tab text="Orders history">
                     <content>
                         <VBox spacing="15.0">
                             <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
-                            <Label text="Comenzile mele anterioare:">
+                            <Label text="Previous orders:">
                                 <font><Font name="System Bold" size="16.0"/></font>
                             </Label>
 
                             <TableView fx:id="ordersHistoryTable" VBox.vgrow="ALWAYS">
                                 <columns>
-                                    <TableColumn fx:id="orderId" text="ID Comanda"/>
+                                    <TableColumn fx:id="orderId" text="ID"/>
                                     <TableColumn fx:id="orderDate" text="Data" prefWidth="150.0"/>
                                     <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0"/>
-                                    <TableColumn fx:id="orderDetails" text="Detalii (Produse)" />
+                                    <TableColumn fx:id="orderDetails" text="Details" />
                                 </columns>
                                 <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                 </columnResizePolicy>
                             </TableView>
 
-                            <Button onAction="#handleRefreshHistory" text="Reimprospateaza Lista" />
+                            <Button onAction="#handleRefreshHistory" text="Refresh" />
                         </VBox>
                     </content>
                 </Tab>
             </tabs>
         </TabPane>
+        <ProgressIndicator fx:id="loadingSpinner" visible="false" maxHeight="50.0" maxWidth="50.0"/>
     </children>
-</AnchorPane>
+</StackPane>
