--- a/Restaurant2/src/main/resources/org/example/View/Guest.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Guest.fxml
@@ -18,19 +18,19 @@
 <BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.GuestController">
     <top>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
-            <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-            <children>
-                <HBox alignment="CENTER_LEFT" spacing="10.0">
-                    <children>
-                        <Label text="Welcome to restaurant 'La Andrei'!">
-                            <font><Font name="System Bold" size="18.0" /></font>
-                        </Label>
-                        <Region HBox.hgrow="ALWAYS" />
-                        <Button fx:id="loginButton" onAction="#handleLoginRedirect" text="Login" />
-                    </children>
-                </HBox>
-                <TextField fx:id="searchField" onAction="#handleSearch" promptText="Search..." />
-            </children>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
+                <Label text="Welcome to restaurant 'La Andrei'!">
+                    <font>
+                        <Font name="System Bold" size="18.0"/>
+                    </font>
+                </Label>
+                <Region HBox.hgrow="ALWAYS"/>
+                <Button fx:id="loginButton" onAction="#handleLoginRedirect" text="Login"/>
+            </HBox>
+            <TextField fx:id="searchField" onAction="#handleSearch" promptText="Search..."/>
         </VBox>
     </top>
     <left>
