--- a/Restaurant2/src/main/resources/org/example/View/Staff.fxml
+++ b/Restaurant2/src/main/resources/org/example/View/Staff.fxml
@@ -16,105 +16,118 @@
 
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.control.ProgressIndicator?>
-<StackPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.StaffController">
-    <children>
-        <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <tabs>
-                <Tab text="New order">
-                    <content>
-                        <SplitPane dividerPositions="0.6">
-                            <items>
-                                <VBox spacing="10.0">
-                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
+<StackPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="org.example.Controller.StaffController">
+    <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+             AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Tab text="New order">
+            <SplitPane dividerPositions="0.6">
+                <VBox spacing="10.0">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
 
-                                    <Label text="1. Select table">
-                                        <font><Font name="System Bold" size="14.0" /></font>
-                                    </Label>
-                                    <ListView fx:id="tablesList" orientation="HORIZONTAL" prefHeight="60.0" />
+                    <Label text="1. Select table">
+                        <font>
+                            <Font name="System Bold" size="14.0"/>
+                        </font>
+                    </Label>
+                    <ListView fx:id="tablesList" orientation="HORIZONTAL" prefHeight="60.0"/>
 
-                                    <Label text="2. Add products to order:">
-                                        <font><Font name="System Bold" size="14.0" /></font>
-                                    </Label>
+                    <Label text="2. Add products to order:">
+                        <font>
+                            <Font name="System Bold" size="14.0"/>
+                        </font>
+                    </Label>
 
-                                    <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
-                                        <columns>
-                                            <TableColumn fx:id="productName" text="Product" prefWidth="250.0"/>
-                                            <TableColumn fx:id="productPrice" text="Price" prefWidth="100.0"/>
-                                            <TableColumn fx:id="productCategory" text="Category" prefWidth="150.0"/>
-                                        </columns>
-                                        <columnResizePolicy>
-                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                        </columnResizePolicy>
-                                    </TableView>
+                    <TableView fx:id="menuTable" VBox.vgrow="ALWAYS">
+                        <columns>
+                            <TableColumn fx:id="productName" text="Product" prefWidth="250.0"/>
+                            <TableColumn fx:id="productPrice" text="Price" prefWidth="100.0"/>
+                            <TableColumn fx:id="productCategory" text="Category" prefWidth="150.0"/>
+                        </columns>
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                        </columnResizePolicy>
+                    </TableView>
 
-                                    <Button maxWidth="Infinity" onAction="#handleAddToOrder" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Add to order (+)" />
-                                </VBox>
+                    <Button maxWidth="Infinity" onAction="#handleAddToOrder"
+                            style="-fx-background-color: #4CAF50; -fx-text-fill: white;"
+                            text="Add to order (+)"/>
+                </VBox>
 
-                                <VBox spacing="10.0">
-                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
-                                    <Label text="Current order:">
-                                        <font><Font name="System Bold" size="16.0" /></font>
-                                    </Label>
+                <VBox spacing="10.0">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                    <Label text="Current order:">
+                        <font>
+                            <Font name="System Bold" size="16.0"/>
+                        </font>
+                    </Label>
 
-                                    <TableView fx:id="orderTable" VBox.vgrow="ALWAYS">
-                                        <columns>
-                                            <TableColumn fx:id="orderItemName" text="Product" />
-                                            <TableColumn fx:id="orderItemPrice" text="Price"/>
-                                            <TableColumn fx:id="orderItemQuantity" text="Quantity" prefWidth="50.0"/>
-                                        </columns>
-                                        <columnResizePolicy>
-                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                        </columnResizePolicy>
-                                    </TableView>
+                    <TableView fx:id="orderTable" VBox.vgrow="ALWAYS">
+                        <columns>
+                            <TableColumn fx:id="orderItemName" text="Product"/>
+                            <TableColumn fx:id="orderItemPrice" text="Price"/>
+                            <TableColumn fx:id="orderItemQuantity" text="Quantity" prefWidth="50.0"/>
+                        </columns>
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                        </columnResizePolicy>
+                    </TableView>
 
-                                    <Button onAction="#handleRemoveItem" text="Delete product" textFill="RED" />
+                    <Button onAction="#handleRemoveItem" text="Delete product" textFill="RED"/>
 
-                                    <VBox style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;">
-                                        <Label text="Active offers: " style="-fx-font-weight: bold;"/>
-                                        <Label fx:id="offersLabel" text="-" textFill="#2ecc71" wrapText="true" />
-                                        <HBox alignment="CENTER_RIGHT" spacing="10.0">
-                                            <Label text="Total:">
-                                                <font><Font size="18.0" /></font>
-                                            </Label>
-                                            <Label fx:id="totalLabel" text="0.00 RON" textFill="#d35400">
-                                                <font><Font name="System Bold" size="24.0" /></font>
-                                            </Label>
-                                        </HBox>
-                                    </VBox>
-
-                                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0" style="-fx-base: #2196F3;" text="Finish" />
-                                </VBox>
-                            </items>
-                        </SplitPane>
-                    </content>
-                </Tab>
-
-                <Tab text="Orders history">
-                    <content>
-                        <VBox spacing="15.0">
-                            <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
-                            <Label text="Previous orders:">
-                                <font><Font name="System Bold" size="16.0"/></font>
+                    <VBox style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;">
+                        <Label text="Active offers: " style="-fx-font-weight: bold;"/>
+                        <Label fx:id="offersLabel" text="-" textFill="#2ecc71" wrapText="true"/>
+                        <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                            <Label text="Total:">
+                                <font>
+                                    <Font size="18.0"/>
+                                </font>
                             </Label>
+                            <Label fx:id="totalLabel" text="0.00 RON" textFill="#d35400">
+                                <font>
+                                    <Font name="System Bold" size="24.0"/>
+                                </font>
+                            </Label>
+                        </HBox>
+                    </VBox>
 
-                            <TableView fx:id="ordersHistoryTable" VBox.vgrow="ALWAYS">
-                                <columns>
-                                    <TableColumn fx:id="orderId" text="ID"/>
-                                    <TableColumn fx:id="orderDate" text="Data" prefWidth="150.0"/>
-                                    <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0"/>
-                                    <TableColumn fx:id="orderDetails" text="Details" />
-                                </columns>
-                                <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                </columnResizePolicy>
-                            </TableView>
+                    <Button maxWidth="Infinity" onAction="#handleFinalizeOrder" prefHeight="50.0"
+                            style="-fx-base: #2196F3;" text="Finish"/>
+                </VBox>
+            </SplitPane>
+        </Tab>
 
-                            <Button onAction="#handleRefreshHistory" text="Refresh" />
-                        </VBox>
-                    </content>
-                </Tab>
-            </tabs>
-        </TabPane>
-        <ProgressIndicator fx:id="loadingSpinner" visible="false" maxHeight="50.0" maxWidth="50.0"/>
-    </children>
+        <Tab text="Orders history">
+            <VBox spacing="15.0">
+                <padding>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                </padding>
+                <Label text="Previous orders:">
+                    <font>
+                        <Font name="System Bold" size="16.0"/>
+                    </font>
+                </Label>
+
+                <TableView fx:id="ordersHistoryTable" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="orderId" text="ID"/>
+                        <TableColumn fx:id="orderDate" text="Data" prefWidth="150.0"/>
+                        <TableColumn fx:id="orderTotal" text="Total (RON)" prefWidth="100.0"/>
+                        <TableColumn fx:id="orderDetails" text="Details"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+
+                <Button onAction="#handleRefreshHistory" text="Refresh"/>
+            </VBox>
+        </Tab>
+    </TabPane>
+    <ProgressIndicator fx:id="loadingSpinner" visible="false" maxHeight="50.0" maxWidth="50.0"/>
 </StackPane>
